Set UTF-16 mime type

--- a/.gitattributes
+++ b/.gitattributes
@@ -85,7 +85,7 @@ ca.lproj/IDisk.strings -text svneol=unset#text/utf-16
 ca.lproj/Info.nib/keyedobjects.nib -text
 ca.lproj/Info.strings -text svneol=unset#text/utf-16
 ca.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-ca.lproj/Keychain.strings -text
+ca.lproj/Keychain.strings -text svneol=unset#text/utf-16
 ca.lproj/License.strings -text svneol=unset#text/utf-16
 ca.lproj/Localizable.strings -text svneol=unset#text/utf-16
 ca.lproj/Login.nib/keyedobjects.nib -text
@@ -134,7 +134,7 @@ cs.lproj/IDisk.strings -text svneol=unset#text/utf-16
 cs.lproj/Info.nib/keyedobjects.nib -text
 cs.lproj/Info.strings -text svneol=unset#text/utf-16
 cs.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-cs.lproj/Keychain.strings -text
+cs.lproj/Keychain.strings -text svneol=unset#text/utf-16
 cs.lproj/License.strings -text svneol=unset#text/utf-16
 cs.lproj/Localizable.strings -text svneol=unset#text/utf-16
 cs.lproj/Login.nib/keyedobjects.nib -text
@@ -183,7 +183,7 @@ cy.lproj/IDisk.strings -text svneol=unset#text/utf-16
 cy.lproj/Info.nib/keyedobjects.nib -text
 cy.lproj/Info.strings -text svneol=unset#text/utf-16
 cy.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-cy.lproj/Keychain.strings -text
+cy.lproj/Keychain.strings -text svneol=unset#text/utf-16
 cy.lproj/License.strings -text svneol=unset#text/utf-16
 cy.lproj/Localizable.strings -text svneol=unset#text/utf-16
 cy.lproj/Login.nib/keyedobjects.nib -text
@@ -235,7 +235,7 @@ da.lproj/IDisk.strings -text svneol=unset#text/utf-16
 da.lproj/Info.nib/keyedobjects.nib -text
 da.lproj/Info.strings -text svneol=unset#text/utf-16
 da.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-da.lproj/Keychain.strings -text
+da.lproj/Keychain.strings -text svneol=unset#text/utf-16
 da.lproj/License.strings -text svneol=unset#text/utf-16
 da.lproj/Localizable.strings -text svneol=unset#text/utf-16
 da.lproj/Login.nib/keyedobjects.nib -text
@@ -284,7 +284,7 @@ de.lproj/IDisk.strings -text svneol=unset#text/utf-16
 de.lproj/Info.nib/keyedobjects.nib -text
 de.lproj/Info.strings -text svneol=unset#text/utf-16
 de.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-de.lproj/Keychain.strings -text
+de.lproj/Keychain.strings -text svneol=unset#text/utf-16
 de.lproj/License.strings -text svneol=unset#text/utf-16
 de.lproj/Localizable.strings -text svneol=unset#text/utf-16
 de.lproj/Login.nib/keyedobjects.nib -text
@@ -413,7 +413,7 @@ en.lproj/IDisk.strings -text svneol=unset#text/utf-16
 en.lproj/Info.nib/keyedobjects.nib -text
 en.lproj/Info.strings -text svneol=unset#text/utf-16
 en.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-en.lproj/Keychain.strings -text
+en.lproj/Keychain.strings -text svneol=unset#text/utf-16
 en.lproj/License.strings -text svneol=unset#text/utf-16
 en.lproj/Localizable.strings -text svneol=unset#text/utf-16
 en.lproj/Login.nib/keyedobjects.nib -text
@@ -462,7 +462,7 @@ es.lproj/IDisk.strings -text svneol=unset#text/utf-16
 es.lproj/Info.nib/keyedobjects.nib -text
 es.lproj/Info.strings -text svneol=unset#text/utf-16
 es.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-es.lproj/Keychain.strings -text
+es.lproj/Keychain.strings -text svneol=unset#text/utf-16
 es.lproj/License.strings -text svneol=unset#text/utf-16
 es.lproj/Localizable.strings -text svneol=unset#text/utf-16
 es.lproj/Login.nib/keyedobjects.nib -text
@@ -511,7 +511,7 @@ fi.lproj/IDisk.strings -text svneol=unset#text/utf-16
 fi.lproj/Info.nib/keyedobjects.nib -text
 fi.lproj/Info.strings -text svneol=unset#text/utf-16
 fi.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-fi.lproj/Keychain.strings -text
+fi.lproj/Keychain.strings -text svneol=unset#text/utf-16
 fi.lproj/License.strings -text svneol=unset#text/utf-16
 fi.lproj/Localizable.strings -text svneol=unset#text/utf-16
 fi.lproj/Login.nib/keyedobjects.nib -text
@@ -560,7 +560,7 @@ fr.lproj/IDisk.strings -text svneol=unset#text/utf-16
 fr.lproj/Info.nib/keyedobjects.nib -text
 fr.lproj/Info.strings -text svneol=unset#text/utf-16
 fr.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-fr.lproj/Keychain.strings -text
+fr.lproj/Keychain.strings -text svneol=unset#text/utf-16
 fr.lproj/License.strings -text svneol=unset#text/utf-16
 fr.lproj/Localizable.strings -text svneol=unset#text/utf-16
 fr.lproj/Login.nib/keyedobjects.nib -text
@@ -631,7 +631,7 @@ he.lproj/Info.nib/info.nib -text
 he.lproj/Info.nib/keyedobjects.nib -text
 he.lproj/Info.strings -text svneol=unset#text/utf-16
 he.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-he.lproj/Keychain.strings -text
+he.lproj/Keychain.strings -text svneol=unset#text/utf-16
 he.lproj/License.strings -text svneol=unset#text/utf-16
 he.lproj/Localizable.strings -text svneol=unset#text/utf-16
 he.lproj/Login.nib/classes.nib -text
@@ -688,7 +688,7 @@ hu.lproj/IDisk.strings -text svneol=unset#text/utf-16
 hu.lproj/Info.nib/keyedobjects.nib -text
 hu.lproj/Info.strings -text svneol=unset#text/utf-16
 hu.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-hu.lproj/Keychain.strings -text
+hu.lproj/Keychain.strings -text svneol=unset#text/utf-16
 hu.lproj/License.strings -text svneol=unset#text/utf-16
 hu.lproj/Localizable.strings -text svneol=unset#text/utf-16
 hu.lproj/Login.nib/keyedobjects.nib -text
@@ -737,7 +737,7 @@ id.lproj/IDisk.strings -text svneol=unset#text/utf-16
 id.lproj/Info.nib/keyedobjects.nib -text
 id.lproj/Info.strings -text svneol=unset#text/utf-16
 id.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-id.lproj/Keychain.strings -text
+id.lproj/Keychain.strings -text svneol=unset#text/utf-16
 id.lproj/License.strings -text svneol=unset#text/utf-16
 id.lproj/Localizable.strings -text svneol=unset#text/utf-16
 id.lproj/Login.nib/keyedobjects.nib -text
@@ -878,7 +878,7 @@ it.lproj/IDisk.strings -text svneol=unset#text/utf-16
 it.lproj/Info.nib/keyedobjects.nib -text
 it.lproj/Info.strings -text svneol=unset#text/utf-16
 it.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-it.lproj/Keychain.strings -text
+it.lproj/Keychain.strings -text svneol=unset#text/utf-16
 it.lproj/License.strings -text svneol=unset#text/utf-16
 it.lproj/Localizable.strings -text svneol=unset#text/utf-16
 it.lproj/Login.nib/keyedobjects.nib -text
@@ -927,7 +927,7 @@ ja.lproj/IDisk.strings -text svneol=unset#text/utf-16
 ja.lproj/Info.nib/keyedobjects.nib -text
 ja.lproj/Info.strings -text svneol=unset#text/utf-16
 ja.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-ja.lproj/Keychain.strings -text
+ja.lproj/Keychain.strings -text svneol=unset#text/utf-16
 ja.lproj/License.strings -text svneol=unset#text/utf-16
 ja.lproj/License.txt svneol=native#unset
 ja.lproj/Localizable.strings -text svneol=unset#text/utf-16
@@ -1056,7 +1056,7 @@ ko.lproj/IDisk.strings -text svneol=unset#text/utf-16
 ko.lproj/Info.nib/keyedobjects.nib -text
 ko.lproj/Info.strings -text svneol=unset#text/utf-16
 ko.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-ko.lproj/Keychain.strings -text
+ko.lproj/Keychain.strings -text svneol=unset#text/utf-16
 ko.lproj/License.strings -text svneol=unset#text/utf-16
 ko.lproj/Localizable.strings -text svneol=unset#text/utf-16
 ko.lproj/Login.nib/keyedobjects.nib -text
@@ -1419,7 +1419,7 @@ nl.lproj/IDisk.strings -text svneol=unset#text/utf-16
 nl.lproj/Info.nib/keyedobjects.nib -text
 nl.lproj/Info.strings -text svneol=unset#text/utf-16
 nl.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-nl.lproj/Keychain.strings -text
+nl.lproj/Keychain.strings -text svneol=unset#text/utf-16
 nl.lproj/License.strings -text svneol=unset#text/utf-16
 nl.lproj/Localizable.strings -text svneol=unset#text/utf-16
 nl.lproj/Login.nib/keyedobjects.nib -text
@@ -1468,7 +1468,7 @@ no.lproj/IDisk.strings -text svneol=unset#text/utf-16
 no.lproj/Info.nib/keyedobjects.nib -text
 no.lproj/Info.strings -text svneol=unset#text/utf-16
 no.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-no.lproj/Keychain.strings -text
+no.lproj/Keychain.strings -text svneol=unset#text/utf-16
 no.lproj/License.strings -text svneol=unset#text/utf-16
 no.lproj/Localizable.strings -text svneol=unset#text/utf-16
 no.lproj/Login.nib/keyedobjects.nib -text
@@ -1517,7 +1517,7 @@ pl.lproj/IDisk.strings -text svneol=unset#text/utf-16
 pl.lproj/Info.nib/keyedobjects.nib -text
 pl.lproj/Info.strings -text svneol=unset#text/utf-16
 pl.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-pl.lproj/Keychain.strings -text
+pl.lproj/Keychain.strings -text svneol=unset#text/utf-16
 pl.lproj/License.strings -text svneol=unset#text/utf-16
 pl.lproj/License.txt svneol=native#unset
 pl.lproj/Localizable.strings -text svneol=unset#text/utf-16
@@ -1589,7 +1589,7 @@ pt_BR.lproj/Info.nib/info.nib -text
 pt_BR.lproj/Info.nib/keyedobjects.nib -text
 pt_BR.lproj/Info.strings -text svneol=unset#text/utf-16
 pt_BR.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-pt_BR.lproj/Keychain.strings -text
+pt_BR.lproj/Keychain.strings -text svneol=unset#text/utf-16
 pt_BR.lproj/License.strings -text svneol=unset#text/utf-16
 pt_BR.lproj/Localizable.strings -text svneol=unset#text/utf-16
 pt_BR.lproj/Login.nib/classes.nib -text
@@ -1648,7 +1648,7 @@ pt_PT.lproj/IDisk.strings -text svneol=unset#text/utf-16
 pt_PT.lproj/Info.nib/keyedobjects.nib -text
 pt_PT.lproj/Info.strings -text svneol=unset#text/utf-16
 pt_PT.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-pt_PT.lproj/Keychain.strings -text
+pt_PT.lproj/Keychain.strings -text svneol=unset#text/utf-16
 pt_PT.lproj/License.strings -text svneol=unset#text/utf-16
 pt_PT.lproj/Localizable.strings -text svneol=unset#text/utf-16
 pt_PT.lproj/Login.nib/keyedobjects.nib -text
@@ -1794,7 +1794,7 @@ ru.lproj/IDisk.strings -text svneol=unset#text/utf-16
 ru.lproj/Info.nib/keyedobjects.nib -text
 ru.lproj/Info.strings -text svneol=unset#text/utf-16
 ru.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-ru.lproj/Keychain.strings -text
+ru.lproj/Keychain.strings -text svneol=unset#text/utf-16
 ru.lproj/License.strings -text svneol=unset#text/utf-16
 ru.lproj/Localizable.strings -text svneol=unset#text/utf-16
 ru.lproj/Login.nib/keyedobjects.nib -text
@@ -1843,7 +1843,7 @@ sk.lproj/IDisk.strings -text svneol=unset#text/utf-16
 sk.lproj/Info.nib/keyedobjects.nib -text
 sk.lproj/Info.strings -text svneol=unset#text/utf-16
 sk.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-sk.lproj/Keychain.strings -text
+sk.lproj/Keychain.strings -text svneol=unset#text/utf-16
 sk.lproj/License.strings -text svneol=unset#text/utf-16
 sk.lproj/Localizable.strings -text svneol=unset#text/utf-16
 sk.lproj/Login.nib/keyedobjects.nib -text
@@ -2100,7 +2100,7 @@ sv.lproj/IDisk.strings -text svneol=unset#text/utf-16
 sv.lproj/Info.nib/keyedobjects.nib -text
 sv.lproj/Info.strings -text svneol=unset#text/utf-16
 sv.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-sv.lproj/Keychain.strings -text
+sv.lproj/Keychain.strings -text svneol=unset#text/utf-16
 sv.lproj/License.strings -text svneol=unset#text/utf-16
 sv.lproj/Localizable.strings -text svneol=unset#text/utf-16
 sv.lproj/Login.nib/keyedobjects.nib -text
@@ -2171,7 +2171,7 @@ th.lproj/Info.nib/info.nib -text
 th.lproj/Info.nib/keyedobjects.nib -text
 th.lproj/Info.strings -text svneol=unset#text/utf-16
 th.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-th.lproj/Keychain.strings -text
+th.lproj/Keychain.strings -text svneol=unset#text/utf-16
 th.lproj/License.strings -text svneol=unset#text/utf-16
 th.lproj/Localizable.strings -text svneol=unset#text/utf-16
 th.lproj/Login.nib/classes.nib -text
@@ -2250,7 +2250,7 @@ tr.lproj/Info.nib/info.nib -text
 tr.lproj/Info.nib/keyedobjects.nib -text
 tr.lproj/Info.strings -text svneol=unset#text/utf-16
 tr.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-tr.lproj/Keychain.strings -text
+tr.lproj/Keychain.strings -text svneol=unset#text/utf-16
 tr.lproj/License.strings -text svneol=unset#text/utf-16
 tr.lproj/Localizable.strings -text svneol=unset#text/utf-16
 tr.lproj/Login.nib/classes.nib -text
@@ -2427,7 +2427,7 @@ zh_CN.lproj/IDisk.strings -text svneol=unset#text/utf-16
 zh_CN.lproj/Info.nib/keyedobjects.nib -text
 zh_CN.lproj/Info.strings -text svneol=unset#text/utf-16
 zh_CN.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-zh_CN.lproj/Keychain.strings -text
+zh_CN.lproj/Keychain.strings -text svneol=unset#text/utf-16
 zh_CN.lproj/License.strings -text svneol=unset#text/utf-16
 zh_CN.lproj/Localizable.strings -text svneol=unset#text/utf-16
 zh_CN.lproj/Login.nib/keyedobjects.nib -text
@@ -2476,7 +2476,7 @@ zh_TW.lproj/IDisk.strings -text svneol=unset#text/utf-16
 zh_TW.lproj/Info.nib/keyedobjects.nib -text
 zh_TW.lproj/Info.strings -text svneol=unset#text/utf-16
 zh_TW.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
-zh_TW.lproj/Keychain.strings -text
+zh_TW.lproj/Keychain.strings -text svneol=unset#text/utf-16
 zh_TW.lproj/License.strings -text svneol=unset#text/utf-16
 zh_TW.lproj/Localizable.strings -text svneol=unset#text/utf-16
 zh_TW.lproj/Login.nib/keyedobjects.nib -text
