--- a/.gitattributes
+++ b/.gitattributes
@@ -768,6 +768,7 @@ img/arrowRightBlack16.tiff -text svneol=unset#image/tiff
 img/arrowUp.tiff -text svneol=unset#image/tiff
 img/arrowUpBlack.tiff -text svneol=unset#image/tiff
 img/arrowUpBlack16.tiff -text svneol=unset#image/tiff
+img/azure-icon.png -text svneol=unset#image/png
 img/bandwidth.tiff -text svneol=unset#image/tiff
 img/bookmark.png -text svneol=unset#image/png
 img/bookmarks.tiff -text svneol=unset#image/tiff
