Custom permission icon. Credit to Dietmar Kerschner.

--- a/.gitattributes
+++ b/.gitattributes
@@ -831,6 +831,7 @@ img/notfound.tiff -text svneol=unset#image/tiff
 img/open.tiff -text svneol=unset#image/tiff
 img/outline.tiff -text svneol=unset#image/tiff
 img/pencil.tiff -text svneol=unset#image/tiff
+img/permissions.tiff -text
 img/plus.tiff -text svneol=unset#image/tiff
 img/privatefolderbadge.png -text svneol=unset#image/png
 img/queue.tiff -text svneol=unset#image/tiff
