--- a/.gitattributes
+++ b/.gitattributes
@@ -782,6 +782,7 @@ img/arrowUp.tiff -text svneol=unset#image/tiff
 img/arrowUpBlack.tiff -text svneol=unset#image/tiff
 img/arrowUpBlack16.tiff -text svneol=unset#image/tiff
 img/azure-icon.png -text svneol=unset#image/png
+img/azure.icns -text
 img/bandwidth.tiff -text svneol=unset#image/tiff
 img/bookmark.png -text svneol=unset#image/png
 img/bookmarks.tiff -text svneol=unset#image/tiff
