--- a/.gitattributes
+++ b/.gitattributes
@@ -1294,6 +1294,7 @@ lib/asm-3.3.jar -text
 lib/backport-util-concurrent-3.1.jar -text
 lib/cglib-2.2.jar -text
 lib/cloudfiles-1.5.3.jar -text
+lib/cloudfiles.properties -text
 lib/commons-codec-1.4.jar -text
 lib/commons-collections-3.2.1.jar -text
 lib/commons-httpclient-3.1.jar -text
