Add software update to windows build.

--- a/.gitattributes
+++ b/.gitattributes
@@ -2701,8 +2701,11 @@ www/help/zh_CN/.htaccess -text
 www/help/zh_TW/.htaccess -text
 www/update/changelog.html -text
 www/update/changelog.rss -text
+www/update/changelog.txt -text
+www/update/changelog.wyp -text
 www/update/sign.rb -text
 www/update/update.pem -text
+www/update/version.xml -text
 zh_CN.lproj/Alert.nib/classes.nib -text
 zh_CN.lproj/Alert.nib/info.nib -text
 zh_CN.lproj/Alert.nib/keyedobjects.nib -text
